[gd_scene load_steps=14 format=3 uid="uid://ogvd8jfqcpdu"]

[ext_resource type="Script" path="res://entities/projectiles/snowbomb.gd" id="1_ejv72"]
[ext_resource type="Texture2D" uid="uid://cryehokcojeml" path="res://assets/projectiles/snowball/snowball_spritesheet_3x2.png" id="2_uc4yj"]
[ext_resource type="Texture2D" uid="uid://dakvr2ku0m4hs" path="res://assets/towers/64x64_circle_green.png" id="3_q0how"]
[ext_resource type="Script" path="res://components/projectile_behavior_component.gd" id="5_dii4g"]

[sub_resource type="AtlasTexture" id="AtlasTexture_w6g10"]
atlas = ExtResource("2_uc4yj")
region = Rect2(0, 0, 512, 385)

[sub_resource type="AtlasTexture" id="AtlasTexture_ry57b"]
atlas = ExtResource("2_uc4yj")
region = Rect2(512, 0, 512, 385)

[sub_resource type="AtlasTexture" id="AtlasTexture_qo0x3"]
atlas = ExtResource("2_uc4yj")
region = Rect2(1024, 0, 512, 385)

[sub_resource type="AtlasTexture" id="AtlasTexture_uk0lc"]
atlas = ExtResource("2_uc4yj")
region = Rect2(0, 385, 512, 385)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2yik"]
atlas = ExtResource("2_uc4yj")
region = Rect2(512, 385, 512, 385)

[sub_resource type="AtlasTexture" id="AtlasTexture_wf8jq"]
atlas = ExtResource("2_uc4yj")
region = Rect2(1024, 385, 512, 385)

[sub_resource type="SpriteFrames" id="SpriteFrames_roemk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6g10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ry57b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qo0x3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uk0lc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2yik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wf8jq")
}],
"loop": true,
"name": &"idle",
"speed": 15.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0sqos"]
radius = 122.004

[sub_resource type="SpriteFrames" id="SpriteFrames_y7oxd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_q0how")
}, {
"duration": 1.0,
"texture": ExtResource("3_q0how")
}, {
"duration": 1.0,
"texture": ExtResource("3_q0how")
}, {
"duration": 1.0,
"texture": ExtResource("3_q0how")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}]

[node name="Snowbomb" type="Area2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_ejv72")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(0.317647, 0.317647, 0.317647, 1)
rotation = 3.14159
sprite_frames = SubResource("SpriteFrames_roemk")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.855797

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(123, -10)
shape = SubResource("CircleShape2D_0sqos")

[node name="HitVFX" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(240, 0)
sprite_frames = SubResource("SpriteFrames_y7oxd")
animation = &"hit"
autoplay = "hit"
frame_progress = 1.0

[node name="LifespanTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="ProjectileBehaviorComponent" type="Node2D" parent="." node_paths=PackedStringArray("animated_sprite", "collision_shape", "hit_vfx", "hit_sound")]
script = ExtResource("5_dii4g")
animated_sprite = NodePath("../AnimatedSprite2D")
collision_shape = NodePath("../CollisionShape2D")
hit_vfx = NodePath("../HitVFX")
hit_sound = NodePath("")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="HitVFX" to="." method="_on_hit_vfx_animation_finished"]
[connection signal="timeout" from="LifespanTimer" to="." method="_on_lifespan_timer_timeout"]
